// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gunding component Should render the Gunding component 1`] = `
<DocumentFragment>
  <div
    class="c-funding"
  >
    <button
      class="c-btn c-btn--small"
      type="button"
    >
      Sponsor me
    </button>
    <div
      class="c-funding__backdrop"
    />
    <svg
      class="c-funding__knob"
      viewBox="-100 -100 700 700"
    >
      <g>
        <g
          class="c-funding__item"
          transform="matrix(1,0,0,1,0,0)"
        >
          <path
            d="M250,250 l250,0 A250,250 0 0,0 375,33.49364905389035 z"
            fill="none"
          />
          <a
            href="https://example.com/1"
            rel="noopener noreferrer"
            target="_blank"
          >
            <text
              fill="var(--color-secondary)"
              font-size="1em"
              text-anchor="middle"
              transform="rotate(60 397.2243347167969 165)"
              x="398"
              y="200"
            >
              Funding 1
            </text>
            <use
              height="40"
              transform="rotate(60 397.2243347167969 165)"
              width="40"
              x="377.2243347167969"
              xlink:href="#svg-funding 1"
              y="145"
            />
          </a>
        </g>
        <g
          class="c-funding__item"
          transform="matrix(0,1,1,0,1,1)"
        >
          <path
            d="M250,250 l250,0 A250,250 0 0,0 375,33.49364905389035 z"
            fill="none"
          />
          <a
            href="https://example.com/2"
            rel="noopener noreferrer"
            target="_blank"
          >
            <text
              fill="var(--color-secondary)"
              font-size="1em"
              text-anchor="middle"
              transform="rotate(60 397.2243347167969 165)"
              x="398"
              y="200"
            >
              Funding 2
            </text>
            <use
              height="40"
              transform="rotate(60 397.2243347167969 165)"
              width="40"
              x="377.2243347167969"
              xlink:href="#svg-funding 2"
              y="145"
            />
          </a>
        </g>
      </g>
      <g
        class="c-funding__trigger"
        role="button"
      >
        <circle
          cx="250"
          cy="250"
          r="30"
        />
        <text
          fill="var(--color-primary)"
          font-size="2.5em"
          text-anchor="middle"
          x="250"
          y="260"
        >
          +
        </text>
      </g>
    </svg>
    <div
      class="c-funding__crypto c-funding__crypto--bitcoin"
    >
      <h6>
        Donate Bitcoin
      </h6>
      <button
        title="Donate Bitcoin"
        type="button"
      >
        <svg
          class="c-funding__crypto-icon"
        >
          <use
            xlink:href="#svg-bitcoin"
          />
        </svg>
      </button>
      <small>
        <em>
          Click to copy wallet address
        </em>
      </small>
    </div>
    <div
      class="c-funding__crypto c-funding__crypto--shiba-inu"
    >
      <h6>
        Donate Shiba Inu
      </h6>
      <button
        title="Donate Shiba Inu"
        type="button"
      >
        <svg
          class="c-funding__crypto-icon"
        >
          <use
            xlink:href="#svg-shiba-inu"
          />
        </svg>
      </button>
      <small>
        <em>
          Click to copy wallet address
        </em>
      </small>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Gunding component Should unmount the Gunding component 1`] = `<DocumentFragment />`;

exports[`Should test the Funding lifecycle 1`] = `
<DocumentFragment>
  <div
    class="c-funding"
  >
    <button
      class="c-btn c-btn--small"
      type="button"
    >
      Sponsor me
    </button>
    <div
      class="c-funding__backdrop"
    />
    <svg
      class="c-funding__knob"
      viewBox="-100 -100 700 700"
    >
      <g>
        <g
          class="c-funding__item"
          transform="matrix(1,0,0,1,0,0)"
        >
          <path
            d="M250,250 l250,0 A250,250 0 0,0 375,33.49364905389035 z"
            fill="none"
          />
          <a
            href="https://example.com/1"
            rel="noopener noreferrer"
            target="_blank"
          >
            <text
              fill="var(--color-secondary)"
              font-size="1em"
              text-anchor="middle"
              transform="rotate(60 397.2243347167969 165)"
              x="398"
              y="200"
            >
              Funding 1
            </text>
            <use
              height="40"
              transform="rotate(60 397.2243347167969 165)"
              width="40"
              x="377.2243347167969"
              xlink:href="#svg-funding 1"
              y="145"
            />
          </a>
        </g>
        <g
          class="c-funding__item"
          transform="matrix(0,1,1,0,1,1)"
        >
          <path
            d="M250,250 l250,0 A250,250 0 0,0 375,33.49364905389035 z"
            fill="none"
          />
          <a
            href="https://example.com/2"
            rel="noopener noreferrer"
            target="_blank"
          >
            <text
              fill="var(--color-secondary)"
              font-size="1em"
              text-anchor="middle"
              transform="rotate(60 397.2243347167969 165)"
              x="398"
              y="200"
            >
              Funding 2
            </text>
            <use
              height="40"
              transform="rotate(60 397.2243347167969 165)"
              width="40"
              x="377.2243347167969"
              xlink:href="#svg-funding 2"
              y="145"
            />
          </a>
        </g>
      </g>
      <g
        class="c-funding__trigger"
        role="button"
      >
        <circle
          cx="250"
          cy="250"
          r="30"
        />
        <text
          fill="var(--color-primary)"
          font-size="2.5em"
          text-anchor="middle"
          x="250"
          y="260"
        >
          +
        </text>
      </g>
    </svg>
    <div
      class="c-funding__crypto c-funding__crypto--bitcoin"
    >
      <h6>
        Donate Bitcoin
      </h6>
      <button
        title="Donate Bitcoin"
        type="button"
      >
        <svg
          class="c-funding__crypto-icon"
        >
          <use
            xlink:href="#svg-bitcoin"
          />
        </svg>
      </button>
      <small>
        <em>
          Click to copy wallet address
        </em>
      </small>
    </div>
    <div
      class="c-funding__crypto c-funding__crypto--shiba-inu"
    >
      <h6>
        Donate Shiba Inu
      </h6>
      <button
        title="Donate Shiba Inu"
        type="button"
      >
        <svg
          class="c-funding__crypto-icon"
        >
          <use
            xlink:href="#svg-shiba-inu"
          />
        </svg>
      </button>
      <small>
        <em>
          Click to copy wallet address
        </em>
      </small>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should test the Funding lifecycle 2`] = `
<DocumentFragment>
  <div
    class="c-funding c-funding--open"
  >
    <button
      class="c-btn c-btn--small"
      type="button"
    >
      Sponsor me
    </button>
    <div
      class="c-funding__backdrop"
    />
    <svg
      class="c-funding__knob"
      viewBox="-100 -100 700 700"
    >
      <g>
        <g
          class="c-funding__item"
          transform="matrix(1,0,0,1,0,0)"
        >
          <path
            d="M250,250 l250,0 A250,250 0 0,0 375,33.49364905389035 z"
            fill="none"
          />
          <a
            href="https://example.com/1"
            rel="noopener noreferrer"
            target="_blank"
          >
            <text
              fill="var(--color-secondary)"
              font-size="1em"
              text-anchor="middle"
              transform="rotate(60 397.2243347167969 165)"
              x="398"
              y="200"
            >
              Funding 1
            </text>
            <use
              height="40"
              transform="rotate(60 397.2243347167969 165)"
              width="40"
              x="377.2243347167969"
              xlink:href="#svg-funding 1"
              y="145"
            />
          </a>
        </g>
        <g
          class="c-funding__item"
          transform="matrix(0,1,1,0,1,1)"
        >
          <path
            d="M250,250 l250,0 A250,250 0 0,0 375,33.49364905389035 z"
            fill="none"
          />
          <a
            href="https://example.com/2"
            rel="noopener noreferrer"
            target="_blank"
          >
            <text
              fill="var(--color-secondary)"
              font-size="1em"
              text-anchor="middle"
              transform="rotate(60 397.2243347167969 165)"
              x="398"
              y="200"
            >
              Funding 2
            </text>
            <use
              height="40"
              transform="rotate(60 397.2243347167969 165)"
              width="40"
              x="377.2243347167969"
              xlink:href="#svg-funding 2"
              y="145"
            />
          </a>
        </g>
      </g>
      <g
        class="c-funding__trigger"
        role="button"
      >
        <circle
          cx="250"
          cy="250"
          r="30"
        />
        <text
          fill="var(--color-primary)"
          font-size="2.5em"
          text-anchor="middle"
          x="250"
          y="260"
        >
          -
        </text>
      </g>
    </svg>
    <div
      class="c-funding__crypto c-funding__crypto--bitcoin"
    >
      <h6>
        Donate Bitcoin
      </h6>
      <button
        title="Donate Bitcoin"
        type="button"
      >
        <svg
          class="c-funding__crypto-icon"
        >
          <use
            xlink:href="#svg-bitcoin"
          />
        </svg>
      </button>
      <small>
        <em>
          Click to copy wallet address
        </em>
      </small>
    </div>
    <div
      class="c-funding__crypto c-funding__crypto--shiba-inu"
    >
      <h6>
        Donate Shiba Inu
      </h6>
      <button
        title="Donate Shiba Inu"
        type="button"
      >
        <svg
          class="c-funding__crypto-icon"
        >
          <use
            xlink:href="#svg-shiba-inu"
          />
        </svg>
      </button>
      <small>
        <em>
          Click to copy wallet address
        </em>
      </small>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should test the Funding lifecycle 3`] = `
<DocumentFragment>
  <div
    class="c-funding"
  >
    <button
      class="c-btn c-btn--small"
      type="button"
    >
      Sponsor me
    </button>
    <div
      class="c-funding__backdrop"
    />
    <svg
      class="c-funding__knob"
      viewBox="-100 -100 700 700"
    >
      <g>
        <g
          class="c-funding__item"
          transform="matrix(1,0,0,1,0,0)"
        >
          <path
            d="M250,250 l250,0 A250,250 0 0,0 375,33.49364905389035 z"
            fill="none"
          />
          <a
            href="https://example.com/1"
            rel="noopener noreferrer"
            target="_blank"
          >
            <text
              fill="var(--color-secondary)"
              font-size="1em"
              text-anchor="middle"
              transform="rotate(60 397.2243347167969 165)"
              x="398"
              y="200"
            >
              Funding 1
            </text>
            <use
              height="40"
              transform="rotate(60 397.2243347167969 165)"
              width="40"
              x="377.2243347167969"
              xlink:href="#svg-funding 1"
              y="145"
            />
          </a>
        </g>
        <g
          class="c-funding__item"
          transform="matrix(0,1,1,0,1,1)"
        >
          <path
            d="M250,250 l250,0 A250,250 0 0,0 375,33.49364905389035 z"
            fill="none"
          />
          <a
            href="https://example.com/2"
            rel="noopener noreferrer"
            target="_blank"
          >
            <text
              fill="var(--color-secondary)"
              font-size="1em"
              text-anchor="middle"
              transform="rotate(60 397.2243347167969 165)"
              x="398"
              y="200"
            >
              Funding 2
            </text>
            <use
              height="40"
              transform="rotate(60 397.2243347167969 165)"
              width="40"
              x="377.2243347167969"
              xlink:href="#svg-funding 2"
              y="145"
            />
          </a>
        </g>
      </g>
      <g
        class="c-funding__trigger"
        role="button"
      >
        <circle
          cx="250"
          cy="250"
          r="30"
        />
        <text
          fill="var(--color-primary)"
          font-size="2.5em"
          text-anchor="middle"
          x="250"
          y="260"
        >
          +
        </text>
      </g>
    </svg>
    <div
      class="c-funding__crypto c-funding__crypto--bitcoin"
    >
      <h6>
        Donate Bitcoin
      </h6>
      <button
        title="Donate Bitcoin"
        type="button"
      >
        <svg
          class="c-funding__crypto-icon"
        >
          <use
            xlink:href="#svg-bitcoin"
          />
        </svg>
      </button>
      <small>
        <em>
          Click to copy wallet address
        </em>
      </small>
    </div>
    <div
      class="c-funding__crypto c-funding__crypto--shiba-inu"
    >
      <h6>
        Donate Shiba Inu
      </h6>
      <button
        title="Donate Shiba Inu"
        type="button"
      >
        <svg
          class="c-funding__crypto-icon"
        >
          <use
            xlink:href="#svg-shiba-inu"
          />
        </svg>
      </button>
      <small>
        <em>
          Click to copy wallet address
        </em>
      </small>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should test the Funding lifecycle 4`] = `
<DocumentFragment>
  <div
    class="c-funding c-funding--open"
  >
    <button
      class="c-btn c-btn--small"
      type="button"
    >
      Sponsor me
    </button>
    <div
      class="c-funding__backdrop"
    />
    <svg
      class="c-funding__knob"
      viewBox="-100 -100 700 700"
    >
      <g>
        <g
          class="c-funding__item"
          transform="matrix(1,0,0,1,0,0)"
        >
          <path
            d="M250,250 l250,0 A250,250 0 0,0 375,33.49364905389035 z"
            fill="none"
          />
          <a
            href="https://example.com/1"
            rel="noopener noreferrer"
            target="_blank"
          >
            <text
              fill="var(--color-secondary)"
              font-size="1em"
              text-anchor="middle"
              transform="rotate(60 397.2243347167969 165)"
              x="398"
              y="200"
            >
              Funding 1
            </text>
            <use
              height="40"
              transform="rotate(60 397.2243347167969 165)"
              width="40"
              x="377.2243347167969"
              xlink:href="#svg-funding 1"
              y="145"
            />
          </a>
        </g>
        <g
          class="c-funding__item"
          transform="matrix(0,1,1,0,1,1)"
        >
          <path
            d="M250,250 l250,0 A250,250 0 0,0 375,33.49364905389035 z"
            fill="none"
          />
          <a
            href="https://example.com/2"
            rel="noopener noreferrer"
            target="_blank"
          >
            <text
              fill="var(--color-secondary)"
              font-size="1em"
              text-anchor="middle"
              transform="rotate(60 397.2243347167969 165)"
              x="398"
              y="200"
            >
              Funding 2
            </text>
            <use
              height="40"
              transform="rotate(60 397.2243347167969 165)"
              width="40"
              x="377.2243347167969"
              xlink:href="#svg-funding 2"
              y="145"
            />
          </a>
        </g>
      </g>
      <g
        class="c-funding__trigger"
        role="button"
      >
        <circle
          cx="250"
          cy="250"
          r="30"
        />
        <text
          fill="var(--color-primary)"
          font-size="2.5em"
          text-anchor="middle"
          x="250"
          y="260"
        >
          -
        </text>
      </g>
    </svg>
    <div
      class="c-funding__crypto c-funding__crypto--bitcoin"
    >
      <h6>
        Donate Bitcoin
      </h6>
      <button
        title="Donate Bitcoin"
        type="button"
      >
        <svg
          class="c-funding__crypto-icon"
        >
          <use
            xlink:href="#svg-bitcoin"
          />
        </svg>
      </button>
      <small>
        <em>
          Click to copy wallet address
        </em>
      </small>
    </div>
    <div
      class="c-funding__crypto c-funding__crypto--shiba-inu"
    >
      <h6>
        Donate Shiba Inu
      </h6>
      <button
        title="Donate Shiba Inu"
        type="button"
      >
        <svg
          class="c-funding__crypto-icon"
        >
          <use
            xlink:href="#svg-shiba-inu"
          />
        </svg>
      </button>
      <small>
        <em>
          Click to copy wallet address
        </em>
      </small>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should test the Funding lifecycle 5`] = `
<DocumentFragment>
  <div
    class="c-funding"
  >
    <button
      class="c-btn c-btn--small"
      type="button"
    >
      Sponsor me
    </button>
    <div
      class="c-funding__backdrop"
    />
    <svg
      class="c-funding__knob"
      viewBox="-100 -100 700 700"
    >
      <g>
        <g
          class="c-funding__item"
          transform="matrix(1,0,0,1,0,0)"
        >
          <path
            d="M250,250 l250,0 A250,250 0 0,0 375,33.49364905389035 z"
            fill="none"
          />
          <a
            href="https://example.com/1"
            rel="noopener noreferrer"
            target="_blank"
          >
            <text
              fill="var(--color-secondary)"
              font-size="1em"
              text-anchor="middle"
              transform="rotate(60 397.2243347167969 165)"
              x="398"
              y="200"
            >
              Funding 1
            </text>
            <use
              height="40"
              transform="rotate(60 397.2243347167969 165)"
              width="40"
              x="377.2243347167969"
              xlink:href="#svg-funding 1"
              y="145"
            />
          </a>
        </g>
        <g
          class="c-funding__item"
          transform="matrix(0,1,1,0,1,1)"
        >
          <path
            d="M250,250 l250,0 A250,250 0 0,0 375,33.49364905389035 z"
            fill="none"
          />
          <a
            href="https://example.com/2"
            rel="noopener noreferrer"
            target="_blank"
          >
            <text
              fill="var(--color-secondary)"
              font-size="1em"
              text-anchor="middle"
              transform="rotate(60 397.2243347167969 165)"
              x="398"
              y="200"
            >
              Funding 2
            </text>
            <use
              height="40"
              transform="rotate(60 397.2243347167969 165)"
              width="40"
              x="377.2243347167969"
              xlink:href="#svg-funding 2"
              y="145"
            />
          </a>
        </g>
      </g>
      <g
        class="c-funding__trigger"
        role="button"
      >
        <circle
          cx="250"
          cy="250"
          r="30"
        />
        <text
          fill="var(--color-primary)"
          font-size="2.5em"
          text-anchor="middle"
          x="250"
          y="260"
        >
          +
        </text>
      </g>
    </svg>
    <div
      class="c-funding__crypto c-funding__crypto--bitcoin"
    >
      <h6>
        Donate Bitcoin
      </h6>
      <button
        title="Donate Bitcoin"
        type="button"
      >
        <svg
          class="c-funding__crypto-icon"
        >
          <use
            xlink:href="#svg-bitcoin"
          />
        </svg>
      </button>
      <small>
        <em>
          Click to copy wallet address
        </em>
      </small>
    </div>
    <div
      class="c-funding__crypto c-funding__crypto--shiba-inu"
    >
      <h6>
        Donate Shiba Inu
      </h6>
      <button
        title="Donate Shiba Inu"
        type="button"
      >
        <svg
          class="c-funding__crypto-icon"
        >
          <use
            xlink:href="#svg-shiba-inu"
          />
        </svg>
      </button>
      <small>
        <em>
          Click to copy wallet address
        </em>
      </small>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should test the Funding lifecycle 6`] = `
<DocumentFragment>
  <div
    class="c-funding c-funding--open"
  >
    <button
      class="c-btn c-btn--small"
      type="button"
    >
      Sponsor me
    </button>
    <div
      class="c-funding__backdrop"
    />
    <svg
      class="c-funding__knob"
      viewBox="-100 -100 700 700"
    >
      <g>
        <g
          class="c-funding__item"
          transform="matrix(1,0,0,1,0,0)"
        >
          <path
            d="M250,250 l250,0 A250,250 0 0,0 375,33.49364905389035 z"
            fill="none"
          />
          <a
            href="https://example.com/1"
            rel="noopener noreferrer"
            target="_blank"
          >
            <text
              fill="var(--color-secondary)"
              font-size="1em"
              text-anchor="middle"
              transform="rotate(60 397.2243347167969 165)"
              x="398"
              y="200"
            >
              Funding 1
            </text>
            <use
              height="40"
              transform="rotate(60 397.2243347167969 165)"
              width="40"
              x="377.2243347167969"
              xlink:href="#svg-funding 1"
              y="145"
            />
          </a>
        </g>
        <g
          class="c-funding__item"
          transform="matrix(0,1,1,0,1,1)"
        >
          <path
            d="M250,250 l250,0 A250,250 0 0,0 375,33.49364905389035 z"
            fill="none"
          />
          <a
            href="https://example.com/2"
            rel="noopener noreferrer"
            target="_blank"
          >
            <text
              fill="var(--color-secondary)"
              font-size="1em"
              text-anchor="middle"
              transform="rotate(60 397.2243347167969 165)"
              x="398"
              y="200"
            >
              Funding 2
            </text>
            <use
              height="40"
              transform="rotate(60 397.2243347167969 165)"
              width="40"
              x="377.2243347167969"
              xlink:href="#svg-funding 2"
              y="145"
            />
          </a>
        </g>
      </g>
      <g
        class="c-funding__trigger"
        role="button"
      >
        <circle
          cx="250"
          cy="250"
          r="30"
        />
        <text
          fill="var(--color-primary)"
          font-size="2.5em"
          text-anchor="middle"
          x="250"
          y="260"
        >
          -
        </text>
      </g>
    </svg>
    <div
      class="c-funding__crypto c-funding__crypto--bitcoin"
    >
      <h6>
        Donate Bitcoin
      </h6>
      <button
        title="Donate Bitcoin"
        type="button"
      >
        <svg
          class="c-funding__crypto-icon"
        >
          <use
            xlink:href="#svg-bitcoin"
          />
        </svg>
      </button>
      <small>
        <em>
          Click to copy wallet address
        </em>
      </small>
    </div>
    <div
      class="c-funding__crypto c-funding__crypto--shiba-inu"
    >
      <h6>
        Donate Shiba Inu
      </h6>
      <button
        title="Donate Shiba Inu"
        type="button"
      >
        <svg
          class="c-funding__crypto-icon"
        >
          <use
            xlink:href="#svg-shiba-inu"
          />
        </svg>
      </button>
      <small>
        <em>
          Click to copy wallet address
        </em>
      </small>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should test the Funding lifecycle 7`] = `
<DocumentFragment>
  <div
    class="c-funding c-funding--open"
  >
    <button
      class="c-btn c-btn--small"
      type="button"
    >
      Sponsor me
    </button>
    <div
      class="c-funding__backdrop"
    />
    <svg
      class="c-funding__knob"
      viewBox="-100 -100 700 700"
    >
      <g>
        <g
          class="c-funding__item"
          transform="matrix(1,0,0,1,0,0)"
        >
          <path
            d="M250,250 l250,0 A250,250 0 0,0 375,33.49364905389035 z"
            fill="none"
          />
          <a
            href="https://example.com/1"
            rel="noopener noreferrer"
            target="_blank"
          >
            <text
              fill="var(--color-secondary)"
              font-size="1em"
              text-anchor="middle"
              transform="rotate(60 397.2243347167969 165)"
              x="398"
              y="200"
            >
              Funding 1
            </text>
            <use
              height="40"
              transform="rotate(60 397.2243347167969 165)"
              width="40"
              x="377.2243347167969"
              xlink:href="#svg-funding 1"
              y="145"
            />
          </a>
        </g>
        <g
          class="c-funding__item"
          transform="matrix(0,1,1,0,1,1)"
        >
          <path
            d="M250,250 l250,0 A250,250 0 0,0 375,33.49364905389035 z"
            fill="none"
          />
          <a
            href="https://example.com/2"
            rel="noopener noreferrer"
            target="_blank"
          >
            <text
              fill="var(--color-secondary)"
              font-size="1em"
              text-anchor="middle"
              transform="rotate(60 397.2243347167969 165)"
              x="398"
              y="200"
            >
              Funding 2
            </text>
            <use
              height="40"
              transform="rotate(60 397.2243347167969 165)"
              width="40"
              x="377.2243347167969"
              xlink:href="#svg-funding 2"
              y="145"
            />
          </a>
        </g>
      </g>
      <g
        class="c-funding__trigger"
        role="button"
      >
        <circle
          cx="250"
          cy="250"
          r="30"
        />
        <text
          fill="var(--color-primary)"
          font-size="2.5em"
          text-anchor="middle"
          x="250"
          y="260"
        >
          -
        </text>
      </g>
    </svg>
    <div
      class="c-funding__crypto c-funding__crypto--bitcoin"
    >
      <h6>
        Donate Bitcoin
      </h6>
      <button
        title="Donate Bitcoin"
        type="button"
      >
        <svg
          class="c-funding__crypto-icon"
        >
          <use
            xlink:href="#svg-bitcoin"
          />
        </svg>
      </button>
      <small>
        <em>
          Click to copy wallet address
        </em>
      </small>
    </div>
    <div
      class="c-funding__crypto c-funding__crypto--shiba-inu"
    >
      <h6>
        Donate Shiba Inu
      </h6>
      <button
        title="Donate Shiba Inu"
        type="button"
      >
        <svg
          class="c-funding__crypto-icon"
        >
          <use
            xlink:href="#svg-shiba-inu"
          />
        </svg>
      </button>
      <small>
        <em>
          Click to copy wallet address
        </em>
      </small>
    </div>
  </div>
</DocumentFragment>
`;
